--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.6",
   "scripts": {
     "build:release": "tsc",
-    "clean:node": "rimraf ./{rest,v*}/**/*.{js,mjs,d.ts,*map}",
+    "clean:node": "rimraf ./{rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
     "postpublish": "npm run clean:node",
     "publish": "npm run build:release && npm publish -f",
     "test": "tsc --noEmit"
