--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,12 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-extra-semi": "warn",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "warn",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "indent": ["warn", 2, { "SwitchCase": 1 }],
     "prefer-const": "warn",
     "quotes": ["warn", "double"],
