--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discloudjs",
+  "name": "discloudapp",
   "version": "0.0.0",
   "description": "",
   "keywords": [],
@@ -9,7 +9,9 @@
     "@types/node": "^18.7.11",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "dotenv": "^16.0.1",
     "eslint": "^8.22.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
