--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@discloudjs/api-types",
-  "version": "0.0.6",
+  "name": "@discloudapp/api-types",
+  "version": "0.0.7",
   "scripts": {
     "build:release": "tsc",
     "clean:node": "rimraf ./{rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
