--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@discloudjs/rest",
-  "version": "0.0.1",
+  "name": "@discloudapp/rest",
+  "version": "0.0.2",
   "description": "",
   "main": "./dist",
   "scripts": {
