--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@discloudapp/api-types": "^0.0.7",
     "undici": "^5.10.0"
   },
   "publishConfig": {
