fix `type:module` support

--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -18,7 +18,7 @@
   "exports": {
     "./v2": {
       "require": "./v2.js",
-      "import": "./v2.ts",
+      "import": "./v2.js",
       "types": "./v2.d.ts"
     }
   },
