--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@discloudapp/api-types",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "scripts": {
     "build:release": "tsc",
     "clean:node": "rimraf ./{rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/discloudapp/discloud.app.git"
+    "url": "git+https://github.com/Gorniaky/discloud.app.git"
   },
   "keywords": [],
   "author": "",
