--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@discloudapp/api-types",
-  "version": "0.0.29",
+  "version": "0.1.0",
   "scripts": {
     "build:release": "tsc",
     "clean:node": "rimraf ./{rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
     "postpublish": "npm run clean:node",
     "prepublish": "npm run build:release",
+    "publish": "npm publish && npm run postpublish && exit",
     "test:ts": "tsc --noEmit"
   },
   "repository": {
