--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "discloudapp",
   "version": "0.0.0",
-  "description": "",
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "devDependencies": {
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
