--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -5,7 +5,8 @@
   "main": "./dist",
   "scripts": {
     "build:release": "tsc",
-    "publish": "npm run build:release && npm publish -f",
+    "prepublish": "npm run build:release",
+    "release": "npm publish",
     "test:ts": "tsc --noEmit"
   },
   "repository": {
