fix: invalid license

--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@discloudapp/api-types",
   "version": "0.2.2",
+  "private": true,
   "scripts": {
     "build:release": "tsc",
     "clean:node": "rimraf ./{payload,rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
