--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@discloudapp/rest",
   "version": "0.1.2",
-  "description": "",
   "main": "./dist",
+  "private": true,
   "scripts": {
     "build:release": "tsc",
     "prepublish": "npm run build:release",
