--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Gorniaky/discloud.app.git"
+    "url": "git+https://github.com/discloud/discloud.app.git"
   },
   "keywords": [
     "discloud"
