--- a/packages/discloud.app/tsconfig.json
+++ b/packages/discloud.app/tsconfig.json
@@ -38,9 +38,9 @@
     "declaration": true,
     "declarationMap": true,
     // "emitDeclarationOnly": true,
-    "sourceMap": true,
+    // "sourceMap": true,
     // "outFile": "./",
-    "outDir": "./dist",
+    // "outDir": "./",
     // "removeComments": true,
     // "noEmit": true,
     // "importHelpers": true,
