--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,10 +33,10 @@
     "resolveJsonModule": true,
     // "noResolve": true,
     "allowJs": true,
-    // "checkJs": true,
+    "checkJs": true,
     // "maxNodeModuleJsDepth": 1,
     "declaration": true,
-    // "declarationMap": true,
+    "declarationMap": true,
     // "emitDeclarationOnly": true,
     // "sourceMap": true,
     // "outFile": "./",
@@ -55,7 +55,7 @@
     // "stripInternal": true,
     // "noEmitHelpers": true,
     // "noEmitOnError": true,
-    // "preserveConstEnums": true,
+    "preserveConstEnums": true,
     // "declarationDir": "./",
     // "preserveValueImports": true,
     // "isolatedModules": true,
