--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-tsdoc": "^0.2.17",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.24",
     "typescript": "^4.9.4"
   }
 }
