--- a/packages/discloud.app/tsconfig.json
+++ b/packages/discloud.app/tsconfig.json
@@ -40,7 +40,7 @@
     // "emitDeclarationOnly": true,
     // "sourceMap": true,
     // "outFile": "./",
-    // "outDir": "./",
+    "outDir": "dist",
     // "removeComments": true,
     // "noEmit": true,
     // "importHelpers": true,
