--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -25,6 +25,9 @@
       "types": "./v2.d.ts"
     }
   },
+  "typedoc": {
+    "entryPoint": "./v2.ts"
+  },
   "publishConfig": {
     "access": "public"
   }
