--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -8,6 +8,9 @@
     "release": "npm run prepublish && npm publish",
     "test:ts": "tsc --noEmit"
   },
+  "typedoc": {
+    "entryPoint": "./src/index.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/discloud/discloud.app.git"
