--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.24",
+    "typedoc-plugin-markdown": "^3.14.0",
+    "typedoc-plugin-mdn-links": "^2.0.2",
+    "typedoc-plugin-rename-defaults": "^0.6.4",
+    "typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
     "typescript": "^4.9.4"
   }
 }
