--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@discloudapp/rest",
   "version": "0.2.0",
-  "main": "./dist",
+  "main": "dist",
   "scripts": {
     "build:release": "tsc",
     "prepublish": "npm run build:release",
