--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -15,9 +15,13 @@
     "type": "git",
     "url": "git+https://github.com/discloud/discloud.app.git"
   },
+  "keywords": [
+    "discloud"
+  ],
   "license": "Apache-2.0",
   "dependencies": {
     "@discloudapp/api-types": "^0.2.4",
+    "@discloudapp/util": "^0.1.0",
     "undici": "^5.15.0"
   },
   "engines": {
