--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -16,12 +16,13 @@
     "url": "git+https://github.com/discloud/discloud.app.git"
   },
   "keywords": [
-    "discloud"
+    "discloud",
+    "discloud.app"
   ],
   "license": "Apache-2.0",
   "dependencies": {
     "@discloudapp/api-types": "^0.2.4",
-    "@discloudapp/util": "^0.2.0",
+    "@discloudapp/util": "^0.3.0",
     "undici": "^5.16.0"
   },
   "engines": {
