--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@discloudapp/util",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "A utility pack for discloud.app",
   "main": "dist",
   "scripts": {
+    "watch": "tsc -watch -p ./",
     "build:release": "tsc",
     "prepublish": "npm run build:release",
     "release": "npm run prepublish && npm publish",
