--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "comma-dangle": ["warn", "always-multiline"],
     "indent": ["warn", 2, { "SwitchCase": 1 }],
+    "no-empty": ["warn", { "allowEmptyCatch": true }],
     "prefer-const": "warn",
     "quotes": ["warn", "double"],
     "semi": ["warn", "always"],
