--- a/packages/discloud.app/package.json
+++ b/packages/discloud.app/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "main": "index.js",
   "scripts": {
+    "watch": "tsc -watch",
     "build:release": "tsc",
     "prepublish": "npm run build:release",
     "release": "npm run prepublish && npm publish",
