--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
     "typescript": "^4.9.5"
+  },
+  "yarn-upgrade-all": {
+    "ignore": [
+      "rimraf"
+    ]
   }
 }
