--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -2,6 +2,7 @@
   "name": "@discloudapp/rest",
   "version": "0.6.0",
   "main": "dist",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build:release": "tsc",
     "prepublish": "npm run build:release",
@@ -22,7 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@discloudapp/api-types": "^0.2.7",
-    "@discloudapp/util": "^0.4.2",
+    "@discloudapp/util": "^0.4.3",
     "undici": "^5.21.0"
   },
   "engines": {
