--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "watch": "tsc -watch",
     "build:release": "tsc",
-    "clean:node": "rimraf ./{payload,rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
+    "clean:node": "rimraf --glob ./{payload,rest,v*}/**/*.{js,mjs,d.ts,*map} ./v*.{js,mjs,d.ts,*map}",
     "postpublish": "npm run clean:node",
     "prepublish": "npm run build:release",
     "release": "npm run prepublish && npm publish",
