--- a/package.json
+++ b/package.json
@@ -25,9 +25,5 @@
     "typedoc-plugin-resolve-crossmodule-references": "^0.3.3",
     "typescript": "^5.0.4"
   },
-  "yarn-upgrade-all": {
-    "ignore": [
-      "rimraf"
-    ]
-  }
+  "yarn-upgrade-all": {}
 }
