--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -5,6 +5,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build:release": "tsc",
+    "watch": "tsc -watch",
     "prepublish": "npm run build:release",
     "release": "npm run prepublish && npm publish",
     "test:ts": "tsc --noEmit"
@@ -19,8 +20,8 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@discloudapp/api-types": "^0.2.8",
-    "@discloudapp/util": "^0.4.4",
+    "@discloudapp/api-types": "^0.3.0",
+    "@discloudapp/util": "^0.4.5",
     "undici": "^5.23.0"
   },
   "engines": {
