--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -2,8 +2,8 @@
   "name": "@discloudapp/util",
   "version": "0.4.7",
   "description": "A utility pack for discloud.app",
-  "main": "dist",
-  "types": "dist/index.d.ts",
+  "main": "out",
+  "types": "out/index.d.ts",
   "scripts": {
     "watch": "tsc -watch",
     "build:release": "tsc",
@@ -11,7 +11,7 @@
     "release": "npm run prepublish && npm publish",
     "test": "tsc && npm run test:ts && npm run test:unit",
     "test:ts": "tsc --noEmit",
-    "test:unit": "node dist/test"
+    "test:unit": "node out/test"
   },
   "repository": {
     "type": "git",
