--- a/packages/rest/tsconfig.json
+++ b/packages/rest/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "include": ["src"],
+  "include": ["src", "out"],
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "out"
   }
 }
