--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,10 +39,10 @@
     // "emitDeclarationOnly": true,
     // "sourceMap": true,
     // "outFile": "./",
-    "outDir": "dist",
+    "outDir": "out",
     // "removeComments": true,
     // "noEmit": true,
-    // "importHelpers": true,
+    "importHelpers": true,
     // "importsNotUsedAsValues": "remove",
     // "downlevelIteration": true,
     // "sourceRoot": "",
