--- a/packages/discloud.app/package.json
+++ b/packages/discloud.app/package.json
@@ -28,6 +28,7 @@
     "@discloudapp/api-types": "^0.4.0",
     "@discloudapp/rest": "^0.7.3",
     "@discloudapp/util": "^0.4.7",
+    "tslib": "^2.6.2",
     "undici": "^5.23.0",
     "zod": "^3.22.2"
   },
