--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@discloudapp/api-types": "^0.4.0",
     "@discloudapp/util": "^0.4.7",
+    "source-map-support": "^0.5.21",
     "tslib": "^2.6.2",
     "undici": "^5.23.0"
   },
