--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -6,8 +6,8 @@
   "types": "out/index.d.ts",
   "scripts": {
     "watch": "tsc -watch",
-    "build:release": "tsc",
-    "prepublish": "npm run build:release",
+    "build": "tsc",
+    "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
     "test": "tsc && npm run test:ts && npm run test:unit",
     "test:ts": "tsc --noEmit",
