improve package#scripts

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
-    "test:ts": "tsc --noEmit"
+    "test": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
