--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "docgen": "typedoc && typedoc --options typedoc_md.json",
-    "build": "npm run build --workspaces || npm run build --workspaces"
+    "build": "npm run build --workspaces || npm run build --workspaces",
+    "test": "npm run build && npm run test --workspaces"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
