--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -8,7 +8,7 @@
     "postpublish": "npm run clean:node",
     "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
-    "test:ts": "tsc --noEmit"
+    "test": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
