--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -9,9 +9,7 @@
     "build": "tsc",
     "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
-    "test": "tsc && npm run test:ts && npm run test:unit",
-    "test:ts": "tsc --noEmit",
-    "test:unit": "node out/test"
+    "test": "tsc --noEmit && tsc && node out/test"
   },
   "repository": {
     "type": "git",
