--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,6 @@
     "quotes": ["warn", "double"],
     "semi": ["warn", "always"],
     "tsdoc/syntax": "warn"
-  }
+  },
+  "ignorePatterns": ["packages/*/out/"]
 }
