--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -23,8 +23,7 @@
     "@discloudapp/api-types": "^0.5.6",
     "@discloudapp/util": "^0.5.4",
     "source-map-support": "^0.5.21",
-    "tslib": "^2.6.2",
-    "undici": "^6.6.2"
+    "tslib": "^2.6.2"
   },
   "engines": {
     "node": ">=16"
