--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "glob": "^10.3.10",
     "source-map-support": "^0.5.21",
-    "tslib": "^2.6.2",
-    "undici": "^6.6.2"
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
