--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -6,10 +6,11 @@
   "types": "out/index.d.ts",
   "scripts": {
     "watch": "tsc -watch",
+    "test:node": "node --test out/test",
     "build": "tsc",
     "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
-    "test": "tsc --noEmit && tsc && node out/test"
+    "test": "tsc --noEmit && npm run build && npm run test:node"
   },
   "repository": {
     "type": "git",
