--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -22,6 +22,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
+    "@discloudapp/api-types": "^0.6.0",
     "glob": "^10.4.1",
     "source-map-support": "^0.5.21",
     "tslib": "^2.6.2"
