--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "test": "npm run build && npm run test --workspaces"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.8",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
     "dotenv": "^16.4.5",
     "eslint": "^9.5.0",
     "eslint-plugin-tsdoc": "^0.3.0",
+    "globals": "^15.6.0",
     "rimraf": "^5.0.7",
     "typedoc": "^0.26.2",
     "typedoc-material-theme": "^1.0.3",
     "typedoc-plugin-coverage": "^3.3.0",
-    "typedoc-plugin-markdown": "^4.0.3",
+    "typedoc-plugin-markdown": "^4.1.0",
     "typedoc-plugin-mdn-links": "^3.2.1",
     "typedoc-plugin-rename-defaults": "^0.7.1",
-    "typescript": "^5.5.2"
-  },
-  "yarn-upgrade-all": {}
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.13.1"
+  }
 }
