--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -6,7 +6,7 @@
   "types": "out/index.d.ts",
   "scripts": {
     "watch": "tsc -watch",
-    "test:node": "node --test out/test",
+    "test:node": "node --test",
     "build": "tsc",
     "prepublish": "npm run build",
     "release": "npm run prepublish && npm publish",
