--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -25,7 +25,9 @@
     "@discloudapp/api-types": "^0.7.2",
     "glob": "^11.0.1",
     "source-map-support": "^0.5.21",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zod": "^3.24.2",
+    "zod-validation-error": "^3.4.0"
   },
   "publishConfig": {
     "access": "public"
