--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -8,7 +8,8 @@
     "watch": "tsc -w",
     "build": "tsc --emitDeclarationOnly",
     "prepublish": "node esbuild.mjs --production && tsc --emitDeclarationOnly --outDir dist",
-    "release": "npm publish",
+    "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
+    "release": "npm run prepublish && npm publish",
     "test": "tsc --noEmit && tsc && npm run test:node",
     "test:node": "node --test"
   },
