--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@discloudapp/rest",
   "version": "0.11.7",
-  "main": "out",
-  "types": "out/index.d.ts",
+  "main": "dist",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "watch": "tsc -watch",
-    "build": "tsc",
-    "prepublish": "npm run build",
+    "watch": "tsc -w",
+    "build": "tsc --emitDeclarationOnly",
+    "prepublish": "node esbuild.mjs --production && tsc --emitDeclarationOnly --outDir dist",
+    "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
     "release": "npm run prepublish && npm publish",
-    "test": "tsc --noEmit"
+    "test": "tsc --noEmit && tsc && npm run test:node",
+    "test:node": "node --test"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@discloudapp/api-types": "^0.7.3",
-    "@discloudapp/util": "^0.8.1",
+    "@discloudapp/util": "^0.9.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1"
   },
