--- a/packages/discloud.app/package.json
+++ b/packages/discloud.app/package.json
@@ -1,14 +1,16 @@
 {
   "name": "discloud.app",
   "version": "0.13.6",
-  "main": "out",
-  "types": "out/index.d.ts",
+  "main": "dist",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "watch": "tsc -watch",
-    "build": "tsc",
-    "prepublish": "npm run build",
+    "watch": "tsc -w",
+    "build": "tsc --emitDeclarationOnly",
+    "prepublish": "node esbuild.mjs --production && tsc --emitDeclarationOnly --outDir dist",
+    "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
     "release": "npm run prepublish && npm publish",
-    "test": "tsc --noEmit && tsc && node --test"
+    "test": "tsc --noEmit && tsc && npm run test:node",
+    "test:node": "node --test"
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,8 @@
   "homepage": "https://github.com/discloud/discloud.app#readme",
   "dependencies": {
     "@discloudapp/api-types": "^0.7.3",
-    "@discloudapp/rest": "^0.11.7",
-    "@discloudapp/util": "^0.8.2",
+    "@discloudapp/rest": "^0.12.3",
+    "@discloudapp/util": "^0.9.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
     "zod": "^3.24.2"
