--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@types/node": "^22.13.14",
     "@types/source-map-support": "^0.5.10",
     "dotenv": "^16.4.7",
-    "esbuild": "^0.25.1",
+    "esbuild": "^0.25.2",
     "esbuild-plugin-version-injector": "^1.2.1",
     "eslint": "^9.23.0",
     "eslint-plugin-tsdoc": "^0.4.0",
     "globals": "^16.0.0",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "typedoc": "^0.28.1",
     "typedoc-material-theme": "^1.3.0",
