--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -25,6 +25,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@discloudapp/api-types": "^0.7.3",
+    "file-type": "^20.4.1",
     "glob": "^11.0.1",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
