--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -27,6 +27,7 @@
     "@discloudapp/api-types": "^0.7.3",
     "file-type": "^20.4.1",
     "glob": "^11.0.2",
+    "globify-gitignore": "^1.0.3",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
     "zod": "^3.24.3",
