--- a/packages/api-types/tsconfig.json
+++ b/packages/api-types/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "exclude": ["node_modules", "**/.ignore_*"],
-  "include": ["./**.ts", "./**.d.ts"],
   "extends": "../../tsconfig.json",
+  "include": ["**/*.ts"],
   "compilerOptions": {
     "outDir": "./"
   }
