refactor: streamline .gitignore and .npmignore files for better clarity and organization

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@
 # build api-types
 packages/**/*.d.ts
 packages/**/*.js
-packages/**/*.js.map
-packages/**/*.ts.map
+packages/**/*.map
 packages/*/out/
 
 # Logs
