--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@eslint/js": "^9.29.0",
     "@types/node": "^22.15.30",
     "@types/source-map-support": "^0.5.10",
+    "@types/ws": "^8.18.1",
     "dotenv": "^16.5.0",
     "esbuild": "^0.25.5",
     "esbuild-plugin-version-injector": "^1.2.1",
@@ -25,7 +26,7 @@
     "typedoc": "^0.28.5",
     "typedoc-material-theme": "^1.4.0",
     "typedoc-plugin-coverage": "^4.0.1",
-    "typedoc-plugin-markdown": "^4.6.4",
+    "typedoc-plugin-markdown": "^4.7.0",
     "typedoc-plugin-mdn-links": "^5.0.2",
     "typedoc-plugin-rename-defaults": "^0.7.3",
     "typescript": "^5.8.3",
