--- a/packages/ws/package.json
+++ b/packages/ws/package.json
@@ -24,6 +24,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
+    "@discloudapp/api-types": "^1.0.1",
     "ws": "^8.18.2"
   },
   "publishConfig": {
