refactor: update discloud configuration files and improve validation tests

--- a/packages/util/__test__/config/invalid/MAIN/discloud.config
+++ b/packages/util/__test__/config/invalid/MAIN/discloud.config
@@ -1,7 +1,14 @@
-TYPE=bot
-NAME=test
+# https://docs.discloudbot.com/discloud.config
+APT=
+AUTORESTART=
+AVATAR=
+HOSTNAME=
+ID=
 MAIN=_test.txt
-RAM=100
-VERSION=latest
-AUTORESTART=false
-APT=canvas
+NAME=
+RAM=
+START=
+STORAGE=
+TYPE=
+VERSION=
+VLAN=
