--- a/packages/util/__test__/config/valid/discloud.config
+++ b/packages/util/__test__/config/valid/discloud.config
@@ -1,11 +1,14 @@
-ID=
-TYPE=bot
-NAME=test
-MAIN=_test.txt
-RAM=100
-VERSION=latest
-AUTORESTART=false
+# https://docs.discloudbot.com/discloud.config
+APT=
+AUTORESTART=
 AVATAR=
-APT=canvas
-BUILD=
+HOSTNAME=
+ID=
+MAIN=_test.txt
+NAME=
+RAM=
 START=
+STORAGE=
+TYPE=
+VERSION=
+VLAN=
