fix build scripts

--- a/packages/discloud.app/package.json
+++ b/packages/discloud.app/package.json
@@ -7,7 +7,8 @@
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.mjs --watch",
     "watch:tsc": "tsc --noEmit --watch",
-    "prepublish": "node esbuild.mjs --production && tsc --emitDeclarationOnly --outDir dist",
+    "build": "node esbuild.mjs --production && tsc --emitDeclarationOnly --outDir dist",
+    "prepublish": "npm run build",
     "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
     "release": "npm run prepublish && npm publish",
     "test": "tsc --noEmit && tsc && npm run test:node",
