--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@types/node": "^22.16.0",
+    "@types/node": "22",
     "@types/source-map-support": "^0.5.10",
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.2",
@@ -20,7 +20,7 @@
     "esbuild-plugin-version-injector": "^1.2.1",
     "eslint": "^9.35.0",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "typedoc": "^0.28.12",
