--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
     "esbuild": "^0.27.0",
-    "esbuild-plugin-version-injector": "^1.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-tsdoc": "^0.5.0",
     "globals": "^16.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.1.2",
+    "type-fest": "^5.2.0",
     "typedoc": "^0.28.14",
     "typedoc-material-theme": "^1.4.1",
     "typedoc-plugin-coverage": "^4.0.2",
@@ -30,6 +30,7 @@
     "typedoc-plugin-mdn-links": "^5.0.10",
     "typedoc-plugin-rename-defaults": "^0.7.3",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0"
+    "typescript-eslint": "^8.47.0",
+    "unplugin-replace": "^0.6.2"
   }
 }
