--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -13,7 +13,7 @@
     "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
     "release": "npm run prepublish && npm publish",
     "test": "tsc --noEmit && tsc && npm run test:node",
-    "test:node": "node --test"
+    "test:node": "node --test **/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   "dependencies": {
     "@discloudapp/api-types": "^1.0.4",
     "file-type": "^21.1.1",
-    "glob": "^11.1.0",
+    "glob": "^13.0.0",
     "globify-gitignore": "^1.0.3",
     "source-map-support": "^0.5.21",
     "tslib": "^2.8.1",
