update test:node script

--- a/packages/discloud.app/package.json
+++ b/packages/discloud.app/package.json
@@ -12,7 +12,7 @@
     "release:pre": "npm version pre --legacy-peer-deps --no-git-tag-version && npm run prepublish && npm publish --tag=beta",
     "release": "npm run prepublish && npm publish",
     "test": "tsc --noEmit && tsc && npm run test:node",
-    "test:node": "node --test"
+    "test:node": "node --test **/*.test.js"
   },
   "repository": {
     "type": "git",
